--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,15 @@
+/* INDEX FILE */
+
+/*                          DO NOT TOUCH!!!!!                       */
+/*                              Lili's CSS                          */
+
+
+
+/*  */
+
+/* CONTACT FILE */
+/*                          DO NOT TOUCH!!!!!                       */
+/*                            Andrew's CSS                          */
 /* Base Styles */
 body {
     background: linear-gradient(135deg, #e6e9f0 0%, #eef1f5 100%);
@@ -238,3 +250,7 @@ button[type="submit"]:hover {
         font-size: 0.85rem;
     }
 }
+
+/* SERVER FILE */
+
+/*  */
